--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,13 +144,13 @@
        "5"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "number_of_weeks =  # 5\n",
+    "number_of_weeks = 5 # 5\n",
     "number_of_weeks"
    ]
   },
